# Drones

./: .gitignore  README.md  TODO.txt
Circuit/ESP_Drone_Mini/: 51005.PcbLib  AON6512.PcbLib  CAMtastic1.Cam  Drone.PrjPcb  ESP32-S3-MINI-1U PCB Footprint.dxf  ESP32S3-MINI1.PcbLib  PCB1.PcbDoc  PCB2.PcbDoc  PMW3901.SchLib  Readme.md  SMT inductor.PcbLib  Sheet1.SchDoc  Sheet2.SchDoc  Switch_and_button.PcbLib  Switch_and_button.SchLib  TPS63051RMWR.LibPkg  TPS63051RMWR.PcbLib  TPS63051RMWR.SchLib  Type-C-16Pin.PcbLib  Type-C-16Pin.SchLib
Machine/ESP_Drone_Mini/: Motor Supporter.SLDPRT  PCB1.SLDPRT  PCB1.step  Shell.SLDPRT  装配体1.SLDASM
Software/ESP_Drone_Mini/: CMakeLists.txt
Software/ESP_Drone_Mini/components/OpenHover/: CMakeLists.txt
Software/ESP_Drone_Mini/components/OpenHover/env_support/cmake/: esp.cmake
Software/ESP_Drone_Mini/drivers/: CMakeLists.txt  ed_drivers.c  ed_drivers.h
Software/ESP_Drone_Mini/drivers/debugger/: ed_debugger.c  ed_debugger.h
Software/ESP_Drone_Mini/drivers/imu/: ed_imu.c  ed_imu.h
Software/ESP_Drone_Mini/drivers/imu/mpu6050/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
Software/ESP_Drone_Mini/drivers/motor/: ed_motor.c  ed_motor.h
Software/ESP_Drone_Mini/drivers/nvs_flash/: ed_nvs_flash.c  ed_nvs_flash.h
Software/ESP_Drone_Mini/drivers/peripherals/: ed_idf_i2c.c  ed_idf_i2c.h
Software/ESP_Drone_Mini/drivers/wifi/: ed_wifi.c  ed_wifi.h
Software/ESP_Drone_Mini/main/: CMakeLists.txt  esp_drone_config.h  esp_drone_private_config_template.h  idf_component.yml  main.c
(+5 files in other folders)
